Fix deprecated use of new Integer()